Development: Fix several server code issues (#8405)